--- a/src/preferencesdialog.ui
+++ b/src/preferencesdialog.ui
@@ -41,6 +41,29 @@
           <string>The data folder will get big, so use a drive with plenty of free space.</string>
          </property>
         </widget>
+        <widget class="QLabel" name="label_4">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>80</y>
+           <width>161</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Language</string>
+         </property>
+        </widget>
+        <widget class="QComboBox" name="comboBox">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>100</y>
+           <width>201</width>
+           <height>22</height>
+          </rect>
+         </property>
+        </widget>
         <widget class="QLabel" name="label">
          <property name="geometry">
           <rect>
