tweaked fonts on ubuntu

--- a/src/logindialog.ui
+++ b/src/logindialog.ui
@@ -10,6 +10,12 @@
     <height>300</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>DejaVu Sans</family>
+    <pointsize>9</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>User Login</string>
   </property>
@@ -89,6 +95,12 @@
      <width>71</width>
      <height>23</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>DejaVu Sans</family>
+     <pointsize>9</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>New User</string>
