--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -63,6 +63,15 @@
         <pointsize>8</pointsize>
        </font>
       </property>
+      <property name="focusPolicy">
+       <enum>Qt::NoFocus</enum>
+      </property>
+      <property name="tabShape">
+       <enum>QTabWidget::Rounded</enum>
+      </property>
+      <property name="tabBarAutoHide">
+       <bool>false</bool>
+      </property>
       <widget class="QWidget" name="tabTerminal">
        <attribute name="title">
         <string>Terminal</string>
@@ -212,7 +221,7 @@ p
      <x>0</x>
      <y>0</y>
      <width>609</width>
-     <height>19</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
