--- a/src/preferencesdialog.ui
+++ b/src/preferencesdialog.ui
@@ -72,7 +72,7 @@
           <string>Language</string>
          </property>
         </widget>
-        <widget class="QComboBox" name="comboBox">
+        <widget class="QComboBox" name="drpLanguage">
          <property name="geometry">
           <rect>
            <x>10</x>
@@ -81,8 +81,28 @@
            <height>22</height>
           </rect>
          </property>
+         <item>
+          <property name="text">
+           <string>English</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>русский</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Português</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Deutsche</string>
+          </property>
+         </item>
         </widget>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="txtDataDirectory">
          <property name="geometry">
           <rect>
            <x>10</x>
@@ -92,13 +112,21 @@
           </rect>
          </property>
          <property name="styleSheet">
-          <string notr="true">background-color:white; </string>
+          <string notr="true">background-color:white;
+border: 1px solid #d0d0d0;
+</string>
          </property>
          <property name="frameShape">
-          <enum>QFrame::NoFrame</enum>
+          <enum>QFrame::Box</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
          </property>
          <property name="text">
           <string/>
+         </property>
+         <property name="textFormat">
+          <enum>Qt::PlainText</enum>
          </property>
         </widget>
         <widget class="QLabel" name="label_2">
@@ -114,7 +142,7 @@
           <string>Data Directory</string>
          </property>
         </widget>
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="btnChoose">
          <property name="geometry">
           <rect>
            <x>410</x>
@@ -145,7 +173,7 @@
           <string>Incoming Port</string>
          </property>
         </widget>
-        <widget class="QSpinBox" name="spinBox">
+        <widget class="QSpinBox" name="txtIncomingPort">
          <property name="geometry">
           <rect>
            <x>10</x>
