--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -59,8 +59,8 @@
      <widget class="QTabWidget" name="tabWidget">
       <property name="font">
        <font>
-        <family>MS Shell Dlg 2</family>
-        <pointsize>8</pointsize>
+        <family>Helvetica</family>
+        <pointsize>14</pointsize>
        </font>
       </property>
       <property name="focusPolicy">
@@ -138,8 +138,8 @@
                 </property>
                 <property name="font">
                  <font>
-                  <family>MS Shell Dlg 2</family>
-                  <pointsize>8</pointsize>
+                  <family>Helvetica</family>
+                  <pointsize>14</pointsize>
                   <stylestrategy>PreferAntialias</stylestrategy>
                  </font>
                 </property>
@@ -227,7 +227,7 @@ p
      <x>0</x>
      <y>0</y>
      <width>609</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
