#2 new user dialog

--- a/src/logindialog.ui
+++ b/src/logindialog.ui
@@ -20,6 +20,9 @@
    <string>User Login</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>30</x>
