--- a/src/newuserdialog.ui
+++ b/src/newuserdialog.ui
@@ -57,7 +57,7 @@
   </widget>
   <widget class="QDialogButtonBox" name="buttons">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="geometry">
     <rect>
